--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fnx_rest
 description: Set of REST tools
-version: 0.0.1
-author: Tomucha <email@example.com>
+version: 0.5.0
+author: Tomucha <tomucha@gmail.com>
 #homepage: https://www.example.com
 
 environment:
