--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,17 @@
 name: fnx_rest
-description: Set of REST tools
+description: Set of Angular 2 friendly REST tools.
 version: 0.5.0
-author: Tomucha <tomucha@gmail.com>
-#homepage: https://www.example.com
+authors:
+- Tomucha <tomucha@gmail.com>
+- Jiri Zuna
+homepage: https://github.com/fnx-io/fnx_rest
 
 environment:
-  sdk: '>=1.0.0 <2.0.0'
+  sdk: ">=1.8.0 <2.0.0"
 
 dependencies:
   logging: "^0.11.3"
-  browser: any
+  browser: "^0.10.0"
   dart_to_js_script_rewriter: ^1.0.1
 
 dev_dependencies:
