--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,18 @@
 name: fnx_rest
-description: Set of Angular 2 friendly REST tools.
-version: 0.5.0
+description: Set of Angular friendly REST tools.
+version: 2.0.0
 authors:
 - Tomucha <tomucha@gmail.com>
 - Jiri Zuna <jiri@zunovi.cz>
 homepage: https://github.com/fnx-io/fnx_rest
 
 environment:
-  sdk: ">=1.8.0 <2.0.0"
+  sdk: '>=2.0.0-dev.61.0 <3.0.0'
 
 dependencies:
   logging: "^0.11.3"
   browser: "^0.10.0"
-  dart_to_js_script_rewriter: ^1.0.1
 
 dev_dependencies:
-  test: '>=0.12.0 <0.13.0'
-  mockito: ^1.0.1
-
-transformers:
-- dart_to_js_script_rewriter
+  test: '^1.3.0'
+  mockito: ^3.0.0
