--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fnx_rest
-description: Set of Angular friendly REST tools.
-version: 2.1.0
+description: Angular and Flutter friendly RestClient, which will make your communication with REST APIs much simpler.
+version: 2.1.1
 authors:
 - Tomucha <tomucha@gmail.com>
 - Jiri Zuna <jiri@zunovi.cz>
@@ -11,9 +11,9 @@ environment:
   sdk: '>=2.0.0-dev.61.0 <3.0.0'
 
 dependencies:
-  logging: "^0.11.3"
-  http: ^0.11.3+17
+  logging: '>=0.11.0 <1.0.0'
+  http: '>=0.12.0 <1.0.0'
 
 dev_dependencies:
-  test: '^1.3.0'
+  test: '^1.6.0'
   mockito: ^3.0.0
