--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ environment:
 dependencies:
   logging: '>=0.11.0 <1.0.0'
   http: '>=0.12.0 <1.0.0'
+  pedantic: ^1.9.0
 
 dev_dependencies:
   test: '^1.6.0'
