--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: fnx_rest
 description: Angular and Flutter friendly RestClient, which will make your communication with REST APIs much simpler.
-version: 4.0.0
+version: 4.0.1
 authors:
   - Tomucha <tomucha@gmail.com>
   - Jiri Zuna <jiri@zunovi.cz>
@@ -8,7 +8,7 @@ authors:
 homepage: https://github.com/fnx-io/fnx_rest
 
 environment:
-  sdk: '>=2.10.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   logging: any
@@ -17,4 +17,5 @@ dependencies:
 
 dev_dependencies:
   test: '^1.6.0'
-  mockito: ^3.0.0
+  mockito: ^5.0.2
+#  build_runner: ^1.10.0
